# asr_test_docker

./: .env.sample  .gitignore  Dockerfile  Dockerfile.cpu  README.md  azure.yaml  docker-compose.cloudonly.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: google-stt-streaming.md
infra/: README.md  main.bicep  main.parameters.json
infra/modules/: acr.bicep  environment.bicep  identity.bicep  keyvault.bicep  loganalytics.bicep
infra/modules/apps/: backend-service.bicep  webui.bicep
scripts/: build-base-images.ps1  build-base-images.sh
services/azure-stt/: Dockerfile
services/azure-stt-diarization/: Dockerfile  requirements.txt
services/azure-stt-diarization/src/: __init__.py  audio_processor.py  main.py  server.py  transcription_engine.py
services/azure-stt/src/: __init__.py  main.py  server.py  transcription_engine.py
services/base/: Dockerfile.common-cpu  Dockerfile.common-gpu  Dockerfile.espnet-v2-cpu  Dockerfile.espnet-v2-gpu  Dockerfile.espnet-v2-onnx-cpu  Dockerfile.espnet-v2-onnx-gpu  Dockerfile.k2-v2-cpu  Dockerfile.k2-v2-gpu
services/espnet-v2/: .dockerignore  Dockerfile  Dockerfile.cpu  pyproject.toml
services/espnet-v2-onnx/: Dockerfile  Dockerfile.cpu  pyproject.toml
services/espnet-v2-onnx/src/: __init__.py  main.py  server.py  transcription_engine.py
services/espnet-v2-onnx/src/web/: app.js  index.html
services/espnet-v2/src/: __init__.py  main.py  server.py  transcription_engine.py
services/espnet-v2/src/web/: app.js  index.html
services/google-stt/: Dockerfile  requirements.txt
services/google-stt-v1/: requirements.txt
services/google-stt-v1/src/: audio_processor.py  transcription_engine.py
services/google-stt-v2/: requirements.txt
services/google-stt-v2/src/: __init__.py  audio_processor.py  main.py  server.py  transcription_engine.py
services/google-stt/src/: __init__.py  main.py  server.py  transcription_engine.py
services/k2-v2/: .dockerignore  Dockerfile  Dockerfile.cpu  pyproject.toml  requirements.txt
services/k2-v2/src/: __init__.py  main.py  server.py  transcription_engine.py  vad.py
services/k2-v2/src/web/: app.js
services/openai-stt/: requirements.txt
services/openai-stt-mini/: Dockerfile  requirements.txt
services/openai-stt-mini/src/: main.py  server.py  transcription_engine.py
services/openai-stt/src/: __init__.py  audio_processor.py  main.py  server.py  transcription_engine.py
services/webui/: Dockerfile  pyproject.toml
services/webui/src/: __init__.py  config.py  main.py  server.py
services/webui/src/web/: app.js  index.html  viewer.html  viewer.js
src/: __init__.py  audio_processor.py  main.py  transcription_engine.py
src/web/: index.html
