[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reazonspeech-webui"
version = "0.1.0"
description = "Web UI for ReazonSpeech ASR models"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
