[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asr-test-webui"
version = "0.1.0"
description = "Web UI for ASR models"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.5.0",
    "libpass[bcrypt]>=1.9.3",
    "python-multipart>=0.0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
